not implemented operations are removed from menu; "Edit" operation is not visible for images; cosmetic fix "Edit" textarea

--- a/Css/Editor.css
+++ b/Css/Editor.css
@@ -313,7 +313,8 @@ ul.editorMenu {
 /* Edit operation */
 .editorOverlay .editContainer,
 .editorOverlay #tiny_tbl,
-.editorOverlay #tiny_ifr {
+.editorOverlay #tiny_ifr,
+.editorOverlay #editOp {
     width: 500px;
     height: 244px;
 }
